--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -98,7 +98,7 @@
     }
 
     .floating-whatsapp {
-        bottom: 1.5rem;
+        bottom: 3rem;
         right: 1.5rem;
         padding: 0.8rem;
         border-radius: 50%;
